<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Arsitek">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/arsitek1"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Daftar Arsitek Profesional"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_arsitek1"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_height="260dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/arsitek1" />

            <TextView
                android:id="@+id/data_arsitek1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Michael Lauw Studio"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/data2_arsitek1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/Michaellauw.com"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/data3_arsitek1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/holo_blue_bright"
                android:text="@string/michaellauwstudio"
                android:layout_marginTop="5dp"/>

            <ImageView
            android:id="@+id/img_arsitek2"
            android:layout_width="350dp"
            android:layout_height="260dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#00FF9800"
            app:srcCompat="@drawable/arsitek2" />

            <TextView
                android:id="@+id/data_arsitek2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Maga Design"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/data2_arsitek2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/Mega__design"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/data3_arsitek2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/telparsitek2"
                android:textColor="#00508F"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:id="@+id/img_arsitek3"
                android:layout_width="350dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="#00FF9800"
                app:srcCompat="@drawable/arsitek3" />

            <TextView
                android:id="@+id/data_arsitek3"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Revano Satria"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/data2_arsitek3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/revanosatria"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/data3_arsitek3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mssmassociates"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/m_kembali"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_menu"
                android:backgroundTint="#FFC107"
                android:text="Kembali"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>