<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bahan">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Harga Genteng Keramik 2021 : Kia, Kanmuri dan M-Class"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_height="260dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/genteng" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Harga Genteng Keramik 2020 – Berbagai macam jenis genteng beredar dipasaran, mulai dari genteng standar yang terbuat dari tanah liat, genteng metal, hingga genteng keramik. Setiap jenis genteng memiliki kelebihan dan kekurangan sendiri-sendiri. Kalian tinggal memilihnya sesuai kebutuhan, dan tentunya budget yang dimiliki." />

            <TextView
                android:id="@+id/bahan1"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/genteng"
                android:textStyle="italic" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Harga Cat Belazo Interior dan Eksterior Terbaru 2021"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_height="260dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/belazo" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="Harga Cat Belazo – Tidak hanya soal warna, kalian juga harus memperhatikan merk cat sebelum membelinya." />

            <TextView
                android:id="@+id/bahan2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cat"
                android:textStyle="italic" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Harga Plafon Gypsum dan GRC Semua Ukuran Terbaru 2021"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_height="260dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/plafon" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="Harga Plafon Gypsum Terbaru– Bagi kalian yang sedang membangun sebuah istana ataupun rumah, pastinya kalian menginginkan tampilan yang apik dan bagus, baik bagian luar maupun dalamnya." />

            <TextView
                android:id="@+id/bahan3"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/plafon"
                android:textStyle="italic" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Harga Kayu Usuk Semua Jenis Terlengkap dan Terbaru 2021"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_height="260dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/kayu" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Harga Kayu Usuk Terlengkap – Seperti kita ketahui dalam membuat suatu bangunan terutama sebuah rumah kita memang memerlukan kayu sebagai salah satu bahan bangunan. Bukan hanya untuk kusenan saja, namun kayu juga kerap sekali dibutuhkan untuk membuat rangka atap rumah. Seperti halnya untuk usuk dan reng." />

            <TextView
                android:id="@+id/bahan4"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/kayu"
                android:textStyle="italic" />

            <Button
                android:id="@+id/bahankembali"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_menu"
                android:backgroundTint="#FFC107"
                android:text="Kembali"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>